@@ -32,6 +32,7 @@ Bug fixes
  * Prevent error when comparing pages that reference a model with a custom primary key (Fidel Ramos)
  * Moved ``get_document_model`` location so it can be imported when Models are not yet loaded (Andrey Smirnov)
  * Fixed incorrect HTML escaping of Jinja2 form templates for StructBlocks (Brady Moe)
+ * All templates with wagtailsettings and modeladmin now use ``block.super`` for ``extra_js`` & ``extra_css`` (Timothy Bautista)
 
 
 Upgrade considerations
