@@ -4,6 +4,8 @@
 {% block titletag %}{{ view.get_meta_title }}{% endblock %}
 
 {% block extra_css %}
+    {{ block.super }}
+
     {% include "wagtailadmin/pages/_editor_css.html" %}
     {{ edit_handler.form.media.css }}
 
@@ -11,6 +13,8 @@
 {% endblock %}
 
 {% block extra_js %}
+    {{ block.super }}
+
     {% include "wagtailadmin/pages/_editor_js.html" %}
     {{ edit_handler.form.media.js }}
     {{ edit_handler.html_declarations }}
