@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block extra_js %}
+    {{ block.super }}
     {{ view.media.js }}
 {% endblock %}
 
